--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "Consider 2-bit transmitting channel such that:\n",
     "- one bit is transmitted without any process\n",
-    "- another bit is transmitted with <b>XOR</b> operation of inputs.\n",
+    "- another bit is transmitted with <b>XOR</b> operation of two inputs of bits.\n",
     "\n",
-    "We call these channels are <i>polarized</i> as it transmits the single bit <b>twice</b>. Thus, the first bit is <i>repetively coded</i>, therefore, it is a good channel. Otherwise, it is a bad channel.\n",
+    "We call these channels are <i>polarized</i> as it transmits the single bit <b>twice</b>. Thus, the twice-transmitted bit is <i>repetively coded</i>, therefore, it is a good channel. Otherwise, it is a bad channel.\n",
     "We may demonstrate such channel using this $G_{2}$ matrix.\n",
     "\n",
     "$$G_{2} = \\begin{bmatrix}1 & 0\\\\\n",
@@ -75,7 +75,7 @@
    "id": "d96d614c",
    "metadata": {},
    "source": [
-    "In addition, we use 1 or 0 (bits) for the data. XOR operation for $x_{4}G_{2}$ was needed. The XOR operation can be implemented by adding the bits and then the (mod 2) operation."
+    "In addition, we use 1 or 0 (bits) for the data. XOR operation for $x_{4}G_{2}$ was needed. The XOR operation can be implemented by adding the bits and then the (mod 2) operation. Adding in mod 2 is the addition in Galois field of $GF(2)$."
    ]
   },
   {
@@ -212,7 +212,7 @@
     "w & =\\begin{bmatrix}U_{01}G_{2} & U_{23}G_{2}\\end{bmatrix}=\\begin{bmatrix}w_{0} & w_{1} & w_{2} & w_{3}\\end{bmatrix}\\\\\n",
     "w' & =w\\begin{bmatrix}1 & 0 & 0 & 0 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 & 1\\end{bmatrix} = \\begin{bmatrix}w'_{0} & w'_{1} & w'_{2} & w'_{3}\\end{bmatrix} = \\begin{bmatrix}W'_{01} & W'_{23}\\end{bmatrix}\\\\\n",
     "y' & = \\begin{bmatrix}W'_{01}G_{2} & W'_{23}G_{2}\\end{bmatrix} = \\begin{bmatrix}y'_{0} & y'_{1} & y'_{2} & y'_{3}\\end{bmatrix} \\\\\n",
-    "y & = \\begin{bmatrix}y_{0} & y_{1} & y_{2} & y_{3}\\end{bmatrix} = \\begin{bmatrix}y'_{0} & y'_{2} & y'_{1} & y'_{3}\\end{bmatrix}\n",
+    "y & = \\begin{bmatrix}y_{0} & y_{1} & y_{2} & y_{3}\\end{bmatrix} = \\begin{bmatrix}y'_{0} & y'_{2} & y'_{1} & y'_{3}\\end{bmatrix} = y'\\begin{bmatrix}1 & 0 & 0 & 0 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 & 1\\end{bmatrix}\n",
     "\\end{split}\n",
     "\\end{equation}$$\n",
     "\n",
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
