kronecker product added.

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -282,9 +282,50 @@
     "\n",
     "$$G_{4} = \\begin{bmatrix}1 & 0 & 0 & 0 \\\\ 1 & 1 & 0 & 0 \\\\ 1 & 0 & 1 & 0 \\\\ 1 & 1 & 1 & 1\\end{bmatrix} = \\begin{bmatrix}G_{2} & \\mathbb{0} \\\\ G_{2} & G_{2}\\end{bmatrix} = G_{2} \\begin{bmatrix}\\mathbb{I} & \\mathbb{0} \\\\ \\mathbb{I} & \\mathbb{I}\\end{bmatrix} = G_{2} \\mathbb{G}_{2}$$\n",
     "\n",
-    "This matrix operation is called the <b><i>Kronecker product</i></b>. You may notice later that this Kronecker product can be shown in other coding theory papers such as OFDM <i>Hadamard matrix</i> construction, and so on.\n",
+    "This matrix operation is called the <b><i>Kronecker product</i></b>. You may notice later that this Kronecker product can be shown in other coding theory papers such as OFDM <i>Hadamard matrix</i> construction, and so on.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9bbe38e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$. We may use recursive function for this.\n",
+    "def kronecker_product(mat1, mat2):\n",
+    "    # assuming mat1, mat2 as numpy matrix\n",
+    "    x1, y1 = mat1.shape\n",
+    "    x2, y2 = mat2.shape\n",
+    "    res = np.zeros((x1*x2,y1*y2))\n",
+    "    for i in range(x2):\n",
+    "        for j in range(y2):\n",
+    "            res[i*x1:(i+1)*x1, j*y1:(j+1)*y1] = \n",
+    "    return res\n",
+    "\n",
+    "G2 = np.array([[1,0],[1,1]])\n",
+    "G4_alt = kronecker_product(G2,G2)\n",
+    "print(G4_alt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae5a8a3f",
+   "metadata": {},
+   "source": [
+    "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$, using the Kronecker product. We may use recursive function for this.\n",
     "\n",
     "Now we may implement such polarization coding (<i>i.e. <b>Polar Code</b></i>) as below. This encoding function was implemented as a distinguished <i>.py</i> file."
    ]
@@ -292,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bbe38e6",
+   "id": "9be18216",
    "metadata": {},
    "outputs": [],
    "source": []
