kronecker product data type modified

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9bbe38e6",
    "metadata": {},
    "outputs": [
@@ -295,24 +295,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
+      "[[1 0 0 0]\n",
+      " [1 1 0 0]\n",
+      " [1 0 1 0]\n",
+      " [1 1 1 1]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def kronecker_product(mat1, mat2):\n",
+    "def kronecker_product(mat1, mat2, dtype='int32'):\n",
     "    # assuming mat1, mat2 as numpy matrix\n",
     "    x1, y1 = mat1.shape\n",
     "    x2, y2 = mat2.shape\n",
-    "    res = np.zeros((x1*x2,y1*y2))\n",
+    "    res = np.zeros((x1*x2,y1*y2), dtype=dtype)\n",
     "    for i in range(x2):\n",
     "        for j in range(y2):\n",
-    "            res[i*x1:(i+1)*x1, j*y1:(j+1)*y1] = \n",
+    "            res[i*x1:(i+1)*x1, j*y1:(j+1)*y1] = mat1*mat2[i,j]\n",
+    "    if (dtype=='int32'):\n",
+    "        \n",
     "    return res\n",
     "\n",
     "G2 = np.array([[1,0],[1,1]])\n",
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5a8a3f",
+   "id": "70968ba0",
    "metadata": {},
    "source": [
     "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$, using the Kronecker product. We may use recursive function for this.\n",
@@ -333,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be18216",
+   "id": "9989372a",
    "metadata": {},
    "outputs": [],
    "source": []
