polar encode half-implementation with error messages

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "9bbe38e6",
    "metadata": {},
    "outputs": [
@@ -313,8 +313,6 @@
     "    for i in range(x2):\n",
     "        for j in range(y2):\n",
     "            res[i*x1:(i+1)*x1, j*y1:(j+1)*y1] = mat1*mat2[i,j]\n",
-    "    if (dtype=='int32'):\n",
-    "        \n",
     "    return res\n",
     "\n",
     "G2 = np.array([[1,0],[1,1]])\n",
@@ -324,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70968ba0",
+   "id": "5e0dc123",
    "metadata": {},
    "source": [
     "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$, using the Kronecker product. We may use recursive function for this.\n",
@@ -334,11 +332,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9989372a",
+   "execution_count": 18,
+   "id": "7ead63de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PolarEncode():\n",
+    "    def __init__(self):\n",
+    "        self.G = []\n",
+    "        self.G.append(np.array([[1,0],[1,1]]))\n",
+    "        self.frozen_pattern = None\n",
+    "        self.zero_padding = 0\n",
+    "        \n",
+    "    def encode(self, input_seq, block_len, frozen_pattern):\n",
+    "        # input_seq: 1d np array\n",
+    "        # block_len: int, power of 2\n",
+    "        # frozen_pattern: 1d np bit array of length $(block_len), '1' responds frozen.\n",
+    "        if (not isinstance(block_len, (int))):\n",
+    "            raise TypeError(f'PolarEncode.encode(): block_len (= {block_len}) was not integer.')\n",
+    "        if (not isinstance(input_seq, (np.ndarray))):\n",
+    "            raise TypeError(f'PolarEncode.encode(): input_seq was not a numpy.ndarray instance.')\n",
+    "        if (not isinstance(frozen_pattern, (np.ndarray))):\n",
+    "            raise TypeError(f'PolarEncode.encode(): frozen_pattern was not a numpy.ndarray instance.')\n",
+    "        \n",
+    "        G_N = np.log2(block_len)\n",
+    "        enc_map = self._encode_map(G_N)\n",
+    "        \n",
+    "        blen, _ = enc_map.shape\n",
+    "        if (block_len != blen):\n",
+    "            raise ValueError(f'PolarEncode.encode(): block_len (= {block_len}) was not power of 2.')\n",
+    "        if (len(frozen_pattern) != blen):\n",
+    "            raise ValueError(f'PolarEncode.encode(): frozen pattern has length of {len(frozen_pattern)} while it requires to be {blen}.')\n",
+    "        self.frozen_pattern = frozen_pattern\n",
+    "        \n",
+    "        return G_N\n",
+    "    \n",
+    "    def _encode_map(self, G_N):\n",
+    "        while (len(self.G) < G_N):\n",
+    "            self.G.append(self._kronecker_product(self.G[-1],self.G[0]))\n",
+    "        return self.G[int(G_N)-1]\n",
+    "\n",
+    "    def _kronecker_product(self, mat1, mat2, dtype='int32'):\n",
+    "        # assuming mat1, mat2 as numpy matrix\n",
+    "        x1, y1 = mat1.shape\n",
+    "        x2, y2 = mat2.shape\n",
+    "        res = np.zeros((x1*x2,y1*y2), dtype=dtype)\n",
+    "        for i in range(x2):\n",
+    "            for j in range(y2):\n",
+    "                res[i*x1:(i+1)*x1, j*y1:(j+1)*y1] = mat1*mat2[i,j]\n",
+    "        return res\n",
+    "\n",
+    "g = PolarCode()\n",
+    "print(g.encode(1, 2))\n",
+    "print(type(np.array([1])))"
+   ]
   }
  ],
  "metadata": {
