polar encode 3/4 implementation

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -11,7 +11,7 @@
     "- one bit is transmitted without any process\n",
     "- another bit is transmitted with <b>XOR</b> operation of two inputs of bits.\n",
     "\n",
-    "We call these channels are <i>polarized</i> as it transmits the single bit <b>twice</b>. Thus, the twice-transmitted bit is <i>repetively coded</i>, therefore, it is a good channel. Otherwise, it is a bad channel.\n",
+    "We call these channels are <i>polarized</i> as it transmits a single bit <b>twice</b>. Thus, the twice-transmitted bit is <i>repetively coded</i>, therefore, it is a good channel. Otherwise, it is a bad channel.\n",
     "We may demonstrate such channel using this $G_{2}$ matrix.\n",
     "\n",
     "$$G_{2} = \\begin{bmatrix}1 & 0\\\\\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "5aefcd1d",
    "metadata": {},
    "outputs": [
@@ -75,12 +75,12 @@
    "id": "d96d614c",
    "metadata": {},
    "source": [
-    "In addition, we use 1 or 0 (bits) for the data. XOR operation for $x_{4}G_{2}$ was needed. The XOR operation can be implemented by adding the bits and then the (mod 2) operation. Adding in mod 2 is the addition in Galois field of $GF(2)$."
+    "In addition, we use 1 or 0 (bits) for the data. XOR operation for $x_{4}G_{2}$ was needed. The XOR operation can be implemented by adding the bits and then the (mod 2) operation. <b><i>The addition in mod 2</i></b> is the addition in Galois field of $GF(2)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c3a3b08c",
    "metadata": {},
    "outputs": [
@@ -103,12 +103,12 @@
    "id": "0dcd77ea",
    "metadata": {},
    "source": [
-    "Thus, this $G_{2}$ matrix is a one-to-one mapping for Galois field of $GF(2^{2})$. Channel polarization is a linear-based process, thus, it is faster than the other complicated encoders. See the example below."
+    "Thus, this $G_{2}$ matrix is a one-to-one mapping for Galois field of $GF(2^{2})$. (Of course $G_{2}$ has the inverse.) Channel polarization is a linear-based process, thus, it is faster than the other complicated encoders. See the example below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "6e8496a2",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "257cc098",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "0dee7507",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "9bbe38e6",
    "metadata": {},
    "outputs": [
@@ -303,8 +303,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def kronecker_product(mat1, mat2, dtype='int32'):\n",
     "    # assuming mat1, mat2 as numpy matrix\n",
     "    x1, y1 = mat1.shape\n",
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e0dc123",
+   "id": "f206ad35",
    "metadata": {},
    "source": [
     "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$, using the Kronecker product. We may use recursive function for this.\n",
@@ -332,16 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "7ead63de",
+   "execution_count": 19,
+   "id": "d7a04efe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "<class 'numpy.ndarray'>\n"
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n"
      ]
     }
    ],
@@ -358,7 +357,7 @@
     "        # block_len: int, power of 2\n",
     "        # frozen_pattern: 1d np bit array of length $(block_len), '1' responds frozen.\n",
     "        if (not isinstance(block_len, (int))):\n",
-    "            raise TypeError(f'PolarEncode.encode(): block_len (= {block_len}) was not integer.')\n",
+    "            raise TypeError(f'PolarEncode.encode(): block_len (= {block_len}) was not an integer.')\n",
     "        if (not isinstance(input_seq, (np.ndarray))):\n",
     "            raise TypeError(f'PolarEncode.encode(): input_seq was not a numpy.ndarray instance.')\n",
     "        if (not isinstance(frozen_pattern, (np.ndarray))):\n",
@@ -371,10 +370,22 @@
     "        if (block_len != blen):\n",
     "            raise ValueError(f'PolarEncode.encode(): block_len (= {block_len}) was not power of 2.')\n",
     "        if (len(frozen_pattern) != blen):\n",
-    "            raise ValueError(f'PolarEncode.encode(): frozen pattern has length of {len(frozen_pattern)} while it requires to be {blen}.')\n",
+    "            raise ValueError(f'PolarEncode.encode(): frozen pattern has length of {len(frozen_pattern)}, \\\n",
+    "while it requires to be {blen}.')\n",
     "        self.frozen_pattern = frozen_pattern\n",
     "        \n",
-    "        return G_N\n",
+    "        # TODO: encode using enc_map\n",
+    "        res = np.zeros((len(input_seq)//(blen-frozen_pattern.sum()), blen), dtype='int32')\n",
+    "        \n",
+    "        res = np.matmul(res,enc_map)\n",
+    "        \n",
+    "        return res\n",
+    "    \n",
+    "    def used_frozen_pattern(self):\n",
+    "        if (self.frozen_pattern == None):\n",
+    "            raise Exception('This codebook was not used.')\n",
+    "        print(f'code rate: {len(frozen_pattern)-frozen_pattern.sum()}/{len(frozen_pattern)}')\n",
+    "        return self.frozen_pattern\n",
     "    \n",
     "    def _encode_map(self, G_N):\n",
     "        while (len(self.G) < G_N):\n",
@@ -391,9 +402,8 @@
     "                res[i*x1:(i+1)*x1, j*y1:(j+1)*y1] = mat1*mat2[i,j]\n",
     "        return res\n",
     "\n",
-    "g = PolarCode()\n",
-    "print(g.encode(1, 2))\n",
-    "print(type(np.array([1])))"
+    "g = PolarEncode()\n",
+    "print(g.encode(np.array([0,1,1,1,0,0,1,0,1,1]), 4, np.array([1,0,0,0])))\n"
    ]
   }
  ],
