polar encode complete

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f206ad35",
+   "id": "0ea3d0a9",
    "metadata": {},
    "source": [
     "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$, using the Kronecker product. We may use recursive function for this.\n",
@@ -330,17 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d7a04efe",
+   "execution_count": 31,
+   "id": "3b4f82ff",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 0]\n",
-      " [0 0 0 0]\n",
-      " [0 0 0 0]]\n"
+      "[[0 1 0 1]\n",
+      " [1 1 0 0]\n",
+      " [0 0 1 1]\n",
+      " [1 1 0 0]]\n",
+      "code rate: 3/4\n",
+      "2\n"
      ]
     }
    ],
@@ -350,7 +353,7 @@
     "        self.G = []\n",
     "        self.G.append(np.array([[1,0],[1,1]]))\n",
     "        self.frozen_pattern = None\n",
-    "        self.zero_padding = 0\n",
+    "        self.zero_padding = -1\n",
     "        \n",
     "    def encode(self, input_seq, block_len, frozen_pattern):\n",
     "        # input_seq: 1d np array\n",
@@ -374,18 +377,34 @@
     "while it requires to be {blen}.')\n",
     "        self.frozen_pattern = frozen_pattern\n",
     "        \n",
-    "        # TODO: encode using enc_map\n",
-    "        res = np.zeros((len(input_seq)//(blen-frozen_pattern.sum()), blen), dtype='int32')\n",
-    "        \n",
-    "        res = np.matmul(res,enc_map)\n",
+    "        res = self._frozen_split_stream(input_seq)\n",
+    "        res = np.matmul(res,enc_map)%2\n",
     "        \n",
     "        return res\n",
     "    \n",
     "    def used_frozen_pattern(self):\n",
-    "        if (self.frozen_pattern == None):\n",
+    "        if (self.frozen_pattern is None):\n",
     "            raise Exception('This codebook was not used.')\n",
-    "        print(f'code rate: {len(frozen_pattern)-frozen_pattern.sum()}/{len(frozen_pattern)}')\n",
+    "        blen = len(self.frozen_pattern)\n",
+    "        frozen_bits = self.frozen_pattern.sum()\n",
+    "        print(f'code rate: {blen-frozen_bits}/{blen}')\n",
     "        return self.frozen_pattern\n",
+    "    \n",
+    "    def _frozen_split_stream(self, input_seq):\n",
+    "        N = len(input_seq)\n",
+    "        block_len = len(self.frozen_pattern)\n",
+    "        block_num = -(-N//(block_len-self.frozen_pattern.sum()))\n",
+    "        res = np.zeros((block_num, block_len), dtype='int32')\n",
+    "        \n",
+    "        k = 0\n",
+    "        for i in range(block_num):\n",
+    "            for j, v in enumerate(self.frozen_pattern):\n",
+    "                if (v==0):\n",
+    "                    if (k<N):\n",
+    "                        res[i,j] = input_seq[k]\n",
+    "                    k+=1\n",
+    "        self.zero_padding = k-N\n",
+    "        return res\n",
     "    \n",
     "    def _encode_map(self, G_N):\n",
     "        while (len(self.G) < G_N):\n",
@@ -403,8 +422,18 @@
     "        return res\n",
     "\n",
     "g = PolarEncode()\n",
-    "print(g.encode(np.array([0,1,1,1,0,0,1,0,1,1]), 4, np.array([1,0,0,0])))\n"
+    "print(g.encode(np.array([0,1,1,1,0,0,1,0,1,1]), 4, np.array([1,0,0,0])))\n",
+    "fp = g.used_frozen_pattern()\n",
+    "print(g.zero_padding)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8084a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
