--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "3b4f82ff",
    "metadata": {},
    "outputs": [
@@ -390,6 +390,9 @@
     "        print(f'code rate: {blen-frozen_bits}/{blen}')\n",
     "        return self.frozen_pattern\n",
     "    \n",
+    "    def unite_blocks(self, input_blocks):\n",
+    "        \n",
+    "    \n",
     "    def _frozen_split_stream(self, input_seq):\n",
     "        N = len(input_seq)\n",
     "        block_len = len(self.frozen_pattern)\n",
@@ -422,18 +425,37 @@
     "        return res\n",
     "\n",
     "g = PolarEncode()\n",
-    "print(g.encode(np.array([0,1,1,1,0,0,1,0,1,1]), 4, np.array([1,0,0,0])))\n",
+    "input_sequence = np.array([0,1,1,1,0,0,1,0,1,1])\n",
+    "block_length = 4\n",
+    "frozen_bit_pattern = np.array([1,0,0,0])\n",
+    "\n",
+    "ENCODED_BLOCKS = g.encode(input_sequence, block_length, frozen_bit_pattern)\n",
+    "print(ENCODED_BLOCKS)\n",
     "fp = g.used_frozen_pattern()\n",
     "print(g.zero_padding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "d8084a6b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2790467535213404570404927662635383611165803565110792064097327197730873101389978631706400839291506734463507728257602782531228398600872257773125764593531"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.getrandbits(500)"
+   ]
   }
  ],
  "metadata": {
