encode + union implemented.

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "id": "3b4f82ff",
    "metadata": {},
    "outputs": [
@@ -338,20 +338,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Original stream is: [0 1 1 1 0 0 1 0 1 1 1]\n",
+      "*****(Polar Encoding)*****\n",
       "[[0 1 0 1]\n",
       " [1 1 0 0]\n",
       " [0 0 1 1]\n",
-      " [1 1 0 0]]\n",
+      " [0 1 1 0]]\n",
       "code rate: 3/4\n",
-      "2\n"
+      "1 bits were padded in order to encode in 4-length block.\n",
+      "Encoded stream is: [0 1 0 1 1 1 0 0 0 0 1 1 0 1 1 0]\n"
      ]
     }
    ],
    "source": [
     "class PolarEncode():\n",
     "    def __init__(self):\n",
+    "        # Generator matrix\n",
     "        self.G = []\n",
     "        self.G.append(np.array([[1,0],[1,1]]))\n",
+    "        \n",
+    "        # flags --- these values are used in PolarDecode class.\n",
     "        self.frozen_pattern = None\n",
     "        self.zero_padding = -1\n",
     "        \n",
@@ -390,8 +396,16 @@
     "        print(f'code rate: {blen-frozen_bits}/{blen}')\n",
     "        return self.frozen_pattern\n",
     "    \n",
-    "    def unite_blocks(self, input_blocks):\n",
+    "    def unite_blocks(self, input_blocks, dtype='int64'):\n",
+    "        if (not isinstance(input_blocks, (np.ndarray))):\n",
+    "            raise TypeError(f'PolarEncode.unite_blocks(): input_block was not a numpy.ndarray instance.')\n",
+    "        bnum, blen = input_blocks.shape\n",
+    "        res = np.zeros((bnum*blen,), dtype=dtype)\n",
     "        \n",
+    "        for i in range(bnum):\n",
+    "            for j in range(blen):\n",
+    "                res[i*blen:(i+1)*blen]=input_blocks[i,:]\n",
+    "        return res\n",
     "    \n",
     "    def _frozen_split_stream(self, input_seq):\n",
     "        N = len(input_seq)\n",
@@ -425,15 +439,47 @@
     "        return res\n",
     "\n",
     "g = PolarEncode()\n",
-    "input_sequence = np.array([0,1,1,1,0,0,1,0,1,1])\n",
+    "input_sequence = np.array([0,1,1,1,0,0,1,0,1,1,1])\n",
     "block_length = 4\n",
     "frozen_bit_pattern = np.array([1,0,0,0])\n",
+    "print(f'Original stream is: {input_sequence}')\n",
     "\n",
+    "print('*****(Polar Encoding)*****')\n",
     "ENCODED_BLOCKS = g.encode(input_sequence, block_length, frozen_bit_pattern)\n",
     "print(ENCODED_BLOCKS)\n",
     "fp = g.used_frozen_pattern()\n",
-    "print(g.zero_padding)"
+    "print(f'{g.zero_padding} bits were padded in order to encode in {len(g.frozen_pattern)}-length block.')\n",
+    "ENCODED_STREAM = PolarEncode.unite_blocks(None, ENCODED_BLOCKS)\n",
+    "print(f'Encoded stream is: {ENCODED_STREAM}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ee9ac87",
+   "metadata": {},
+   "source": [
+    "Now we need the decoding function. Recall $G_{2}$ case. If we freeze $u_{0}=0$, we send $\\begin{bmatrix}0 & 0\\end{bmatrix}$ or $\\begin{bmatrix}1 & 1\\end{bmatrix}$. Let's be simple: <b><i>BPSK</i></b> scenario. Other communication scenario also can be decoded if we specify the decision boundaries as well. (Let's make the decision boundary $(v_{d}\\ as\\ decision\\_value, \\delta_{0}\\ as\\ 0\\ direction)$ and the noise spectral density $N_{o}$ to be input variables of the decoding function.)\n",
+    "\n",
+    "### BPSK, hard decision scenario\n",
+    "\n",
+    "If the BPSK sends 0 as $+1$ and 1 as $-1$, $(v_{d}, \\delta_{0}) = (0.0, +1.0)$.\n",
+    "\n",
+    "We can make the decision <i>hard</i> if we decide the received symbol $s$ to be 0 when it satisfies $\\frac{s-v_{d}}{\\delta_{0}-v_{d}}>0$.\n",
+    "\n",
+    "For example of this BPSK, we have $v_{d}=0$ and $\\delta_{0}=1$, then any received $s$ should be determined as 0 if $\\frac{s-0}{1-0}=s>0$.\n",
+    "\n",
+    "However, we cannot decide whether <b><i>the repeatedly transmitted bit</i></b> $u_{1}$ was 0 or 1 by this hard decision scenario, if we received $y=\\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$, while it is very <b><i>likely</i></b> to be $\\hat{u}_1=0$.\n",
+    "\n",
+    "### BPSK, soft decision scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2040eae3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -456,6 +502,14 @@
     "import random\n",
     "random.getrandbits(500)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f77e80b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
