decoding case explanation

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -455,9 +455,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee9ac87",
+   "id": "0efbe3cc",
    "metadata": {},
    "source": [
+    "# Decoding Scenario of Channel Polarization\n",
+    "\n",
     "Now we need the decoding function. Recall $G_{2}$ case. If we freeze $u_{0}=0$, we send $\\begin{bmatrix}0 & 0\\end{bmatrix}$ or $\\begin{bmatrix}1 & 1\\end{bmatrix}$. Let's be simple: <b><i>BPSK</i></b> scenario. Other communication scenario also can be decoded if we specify the decision boundaries as well. (Let's make the decision boundary $(v_{d}\\ as\\ decision\\_value, \\delta_{0}\\ as\\ 0\\ direction)$ and the noise spectral density $N_{o}$ to be input variables of the decoding function.)\n",
     "\n",
     "### BPSK, hard decision scenario\n",
@@ -468,15 +470,66 @@
     "\n",
     "For example of this BPSK, we have $v_{d}=0$ and $\\delta_{0}=1$, then any received $s$ should be determined as 0 if $\\frac{s-0}{1-0}=s>0$.\n",
     "\n",
-    "However, we cannot decide whether <b><i>the repeatedly transmitted bit</i></b> $u_{1}$ was 0 or 1 by this hard decision scenario, if we received $y=\\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$, while it is very <b><i>likely</i></b> to be $\\hat{u}_1=0$.\n",
+    "However, we cannot decide whether <b><i>the repeatedly transmitted bit</i></b> $u_{1}$ was 0 or 1 by this hard decision scenario, if we received $\\mathbb{r}=\\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$, while it is <b><i>more likely</i></b> to be $\\hat{u}_1=0$.\n",
     "\n",
-    "### BPSK, soft decision scenario"
+    "### BPSK, soft decision scenario\n",
+    "\n",
+    "We want to see what the <b><i>likelihood</i></b> is, thus, we see the <i>likelihood ratio (LR)</i>. The likelihood ratio on transmitting the bit stream $\\mathbb{x}=\\left\\{x_{i}\\right\\}$ and received values $\\mathbb{r}=\\left\\{r_{i}\\right\\}$ is defined by:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq4}\n",
+    "LR_{i} = \\frac{\\Pr \\left[ {r_{i}|x_{i}=0} \\right]}{\\Pr \\left[ {r_{i}|x_{i}=1} \\right]}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "We can equivalently hard-decide that $\\hat{u}_{i}=0$ if $LR_{i}>1$, otherwise $\\hat{u}_{i}=1$.\n",
+    "\n",
+    "If the channel was AWGN, i.e., $r_{i} = x_{i} + n$ where $n \\sim \\mathcal{N}(mean=0,var=N_{symbol}=\\sigma^{2})$, the PDF of $n$ follows $p_{n}(r) = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r}{\\sigma}\\right)^{2}}$.\n",
+    "\n",
+    "Then, with known value (by channel equalization from CSI,) $\\delta_{0}$ and $\\delta_{1}$:\n",
+    "\n",
+    "$\\Pr \\left[ {r_{i}|x_{i}=0} \\right] = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}}$, $\\Pr \\left[ {r_{i}|x_{i}=1} \\right] = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2}}$.\n",
+    "\n",
+    "Thus, their ratio cancels out the same constant in AWGN scenario.\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq5}\n",
+    "LR_{i} = \\frac{\\Pr \\left[ {r_{i}|x_{i}=0} \\right]}{\\Pr \\left[ {r_{i}|x_{i}=1} \\right]}\n",
+    "\\end{equation} = \\frac{e^{-\\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}}}{e^{-\\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2}}} = e^{-\\left[ \\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}-\\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2} \\right]}$$\n",
+    "\n",
+    "- (Note that this operation was only based on the <b>likelihood</b>, not <i>a posteriori</i>.) <a>(out of scope.)</a>\n",
+    "\n",
+    "The exponent is called <b><i>Log of Likelihood-Ratio (LLR)</i></b>, because it is. It is its log.\n",
+    "\n",
+    "One may notice that <b>LLR</b> calculation is actually easier <i>(faster!)</i> than <i>LR</i> calculation. We may apply the exponential function later, but we may also use the same hard decision as $\\hat{u}_{i}=0$ if $LLR_{i}>0$, otherwise $\\hat{u}_{i}=1$.\n",
+    "\n",
+    "We only need $N_{symbol}=\\sigma^2$ and $\\delta_{0}$ with $\\delta_{1}$ as preliminary information, then we can instantly compute $LLR_{i}$ with respect to the received value $r_{i}$ by using the formula:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq6}\n",
+    "LLR_{i} = \\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2}-\\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}\n",
+    " = \\frac{{\\left( {r_{i}-\\delta_{1}} \\right)}^{2} - {\\left( {r_{i}-\\delta_{0}} \\right)}^{2}}{N_{symbol}}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "We are not done yet. We must calculate how to recover $\\hat{u}_{1}$ when transmitting $\\begin{bmatrix}0 & 0\\end{bmatrix}$ or $\\begin{bmatrix}1 & 1\\end{bmatrix}$. Fortunately, we have only two cases, so we can use the similar LR definition as:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq7}\n",
+    "LR(\\hat{u}_{1}) = \\frac{\\Pr \\left[ {\\mathbb{r}|\\mathbb{x}=\\begin{bmatrix}0 & 0\\end{bmatrix}} \\right]}{\\Pr \\left[ {\\mathbb{r}|\\mathbb{x}=\\begin{bmatrix}1 & 1\\end{bmatrix}} \\right]}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "Note that $\\Pr \\left[ {\\mathbb{r}|\\mathbb{x}=\\begin{bmatrix}0 & 0\\end{bmatrix}} \\right]$ is the product of independent random variables. Every noise per symbol (received value) was independent. We just transmitted the same value twice.\n",
+    "\n",
+    "Thus, $LR(\\hat{u}_{1}) = LR_{0} LR_{1}$. Thus, $LLR(\\hat{u}_{1}) = LLR_{0} + LLR_{1}$ in this case.\n",
+    "\n",
+    "For example, if we received $\\mathbb{r} = \\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$, then $LLR(\\hat{u}_1) = LLR_{0} + LLR_{1} = \\frac{2.5^2 - 0.5^2 + 0.9^2 - 1.1^2}{N_{symbol}} > 0$, thus, $\\hat{u}_1 = 0$.\n",
+    "\n",
+    "It gets more complicated when you actually don't know what $u_{0}$ was.\n",
+    "\n",
+    "### Polarized channel soft decoding\n",
+    "\n",
+    "What if $x = \\begin{bmatrix}u_{0} & u_{1}\\end{bmatrix}$ and there was no 100% probability of the distribution of "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2040eae3",
+   "id": "06c8598f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -506,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f77e80b2",
+   "id": "ac6956b9",
    "metadata": {},
    "outputs": [],
    "source": []
